# Capsaicin

./: .eslintrc  .gitattributes  .gitignore  0  README.md  components.json  eslint.config.mjs  index.html  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
.github/workflows/: build.yml  release.yml
.husky/: pre-commit
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
src/components/: FavoriteButton.tsx  RecipeCard.tsx  TagInput.tsx  about-dialog.tsx  icons.tsx  layout.tsx  menu-mode-toggle.tsx  sidebar.tsx  theme-provider.tsx
src/components/minimal-tiptap/: minimal-tiptap.tsx  utils.ts
src/components/minimal-tiptap/components/: measured-container.tsx  shortcut-key.tsx  spinner.tsx  toolbar-button.tsx  toolbar-section.tsx
src/components/minimal-tiptap/extensions/: index.ts
src/components/minimal-tiptap/hooks/: use-container-size.ts  use-minimal-tiptap.ts  use-throttle.ts
src/components/ui/: alert-dialog.tsx  calendar.tsx  context-menu.tsx  dialog.tsx  dropdown-menu.tsx  form.tsx  menubar.tsx  sheet.tsx  sidebar.tsx  toast.tsx  use-toast.ts
src/db/: functions.ts  singleton.ts  types.d.ts
src/lib/: fetchRecipeFromURL.ts  useDatabase.ts  utils.ts  zodUtils.ts
src/pages/: CategoriesPage.tsx  CategoryDetailsPage.tsx  CreatePage.tsx  DetailsPage.tsx  EditPage.tsx  ImportRecipePage.tsx  RecipePlanner.tsx  SearchPage.tsx
src/pages/RecipeForm/: Step1.tsx  Step2.tsx  Step3.tsx  index.tsx  schema.ts
src/pages/RecipeForm/Step2/: index.tsx  (+1 more)
src/styles/: globals.css
(+22 files in other folders)
